# Pathtracer

./: .gitignore  .gitmodules  CMakeLists.txt
Libs/lodepng/: CMakeLists.txt  lodepng.h
src/: GlobalSettings.cpp  GlobalSettings.h  Image.h  Pathtracer.cpp  Pathtracer.h  main.cpp
src/Debug/: Log.h
src/Material/: Dielectric.h  Lambertian.h  Material.h  Metal.h
src/Math/: Ray.h  Utility.cpp  Utility.h  Vector3.h
src/Objects/: AABB.h  BVHNode.h  Camera.h  HitRecord.h  Object.h  Scene.h  Sphere.h
src/Util/: Property.h
